--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "bindings": "^1.5.0",
+    "file-uri-to-path": "^2.0.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
