--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@aspnet/signalr": "^1.0.27",
-    "@craco/craco": "^6.4.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,14 +18,14 @@
     "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flagpack": "^1.2.0",
     "react-i18next": "^11.14.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
@@ -37,9 +36,9 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -64,7 +63,6 @@
     "autoprefixer": "^9.8.8",
     "bindings": "^1.5.0",
     "file-uri-to-path": "^2.0.0",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "^3.2.6"
   }
 }
