--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "antd": "^5.2.1",
     "axios": "^1.3.3",
     "formik": "^2.2.9",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.2",
+    "sass-loader": "^13.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
