--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^18.0.10",
     "antd": "^5.2.1",
     "axios": "^1.3.3",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "proxy": "tsc && node api/proxy.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
