--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.2.1",
     "axios": "^1.3.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
