--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "antd": "^5.2.1",
     "axios": "^1.3.3",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "redux-saga": "^1.2.2",
     "sass-loader": "^13.2.0",
     "slick-carousel": "^1.8.1",
