--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.3",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
@@ -62,6 +63,7 @@
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.2.0",
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
     "@types/react-slick": "^0.23.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
