--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "antd": "^5.2.1",
+    "all": "^0.0.0",
+    "antd": "^5.16.1",
     "axios": "^1.3.3",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
